# so101

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DAY_2.md  DEPLOYMENT.md  WORKFLOW.md
scripts/: setup-remote-server.sh
src/so101/: __init__.py  cli.py  config.py  hf.py  ui.py
