[project]
name = "so101"
version = "0.1.0"
description = "Teleop, record and run inference on the SO-101 arm using LeRobot"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # LeRobot core + Feetech SDK (STS3215 motors on SO-101)
    # `intelrealsense` extra pulls pyrealsense2 (Linux/Windows) or
    # pyrealsense2-macosx (macOS) for D405/D415/D435 support.
    "lerobot[feetech,intelrealsense]>=0.6.0",
    # CLI
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    # Rerun viewer used by --display_data=true
    "rerun-sdk>=0.20.0",
]

[project.optional-dependencies]
# CUDA training: uv sync --extra cuda (then install torch from the pytorch index)
cuda = ["torch>=2.4.0"]
# Apple Silicon training: uv sync --extra mps
mps = ["torch>=2.4.0"]

[project.scripts]
so101 = "so101.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/so101"]
