[project]
name = "so101"
version = "0.1.0"
description = "Teleop, record and run inference on the SO-101 arm using LeRobot"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # LeRobot core + all optional dependencies the CLI scripts need:
    #   feetech        - STS3215 motors on SO-101
    #   intelrealsense - pyrealsense2 (Linux/Windows) / pyrealsense2-macosx
    #   core-scripts   - meta-extra pulling `dataset` + `hardware` + `viz`;
    #                    required for lerobot-record / lerobot-teleoperate /
    #                    lerobot-calibrate. Pulls in HuggingFace `datasets`,
    #                    pyarrow, torchcodec, rerun-sdk, pynput, pyserial,
    #                    deepdiff.
    #   training       - wandb + accelerate, needed for lerobot-train.
    #   async          - grpcio + matplotlib, needed for the async client
    #                    (`so101 infer-remote`) which talks to a policy
    #                    server running on a remote GPU.
    "lerobot[feetech,intelrealsense,core-scripts,training,async]>=0.6.0",
    # CLI
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    # Inference dashboard (`so101 ui`)
    "gradio>=4.44.0",
]

[project.optional-dependencies]
# CUDA training: uv sync --extra cuda (then install torch from the pytorch index)
cuda = ["torch>=2.4.0"]
# Apple Silicon training: uv sync --extra mps
mps = ["torch>=2.4.0"]

[project.scripts]
so101 = "so101.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/so101"]
